--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile ~/.gitignore_global
 
 #Ignore idea files
-.idea
+.idea/*
 
 # Ignore bundler config
 /.bundle
